# gray

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Gaussian_Viewer.ini  LICENSE.md  README.md  collect_results.py  colmap.py  convert.py  format.sh  install.sh  make.sh  measure_fps.py  metrics.py  pyproject.toml  render.py  resize.py  run.sh  rx_probe.py  saved_cameras.py  train.py  view.py
cmake/: FindOptiX8.cmake  FindTorch.cmake  fast_viewer.cmake
configs/: hq.json  lq.json
convert/: from_3dgrt.py  from_3dgs.py  safetensors_ply_conversion.py  to_3dgrt.py  to_3dgs.py
cuda/: backward_pass.cu  ellipsoid_viewer.cu  fast_viewer.cpp  forward_pass.cu  params.h  raytracer.cpp  raytracer.h  shaders.cu
cuda/core/: all.h  camera.h  config.h  framebuffer.h  gaussians.h  headers.h  metadata.h  per_pixel_linked_list.h  stats.h
cuda/fast_viewer/: fast_viewer.cpp  fast_viewer_kernels.cu
cuda/opt/: adam.cu  adam.h
cuda/optix/: bvh_wrapper.cu  bvh_wrapper.h  pipeline_wrapper.h
cuda/utils/: activations.cu  common.h  complex_math.h  exception.h  helpers.cu  kernel.cu  misc.cu  random.h  sh.cu  sh.h  vec_math.h
gray/: __init__.py  camera.py  colmap.py  config.py  exposure_comp.py  imports.py  memory.py  mlp.py  prelude.py  raytracer.py  scene.py  utils.py
scripts/: create_all_dense_point_clouds.sh  create_every_dense_point_cloud.sh  download_all_datasets.sh  download_all_pretrained_scenes.sh  download_all_scenes.sh  full_dataset_preparation.sh  resize_all_scenes.sh  run_all_scenes.sh
scripts/windows/: create_all_dense_point_clouds.ps1  download_all_pretrained_scenes.ps1  download_all_scenes.ps1  full_dataset_preparation.ps1  resize_all_scenes.ps1  run_all_scenes.ps1
tests/: __init__.py  test_multiple_gaussians.py  test_single_gaussian.py  utils.py
viewer/: LICENSE.md  __init__.py  requirements.txt  types.py
viewer/widgets/: __init__.py  camera_select.py  compare.py  display_transform.py  ellipsoid_viewer.py  image.py  monitor.py  pixel_inspector.py  point_renderer.py  radio.py  saved_views.py  sphere_viewer.py  viewport_3d.py
viewer/widgets/cameras/: __init__.py  fps.py
viewer/widgets/opengl/: __init__.py
windows/: WINDOWS_README.md  format.ps1  install.ps1  make.ps1  run.ps1
